--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ footer {
     color: #fff;
     padding: 10px 0;
     text-align: center;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
 }
